--- a/redstar_sub.css
+++ b/redstar_sub.css
@@ -1,26 +1,35 @@
 
 body {
     background-color: rgb(34,34,34);
-    overflow: hidden;
 }
 
 p, h1, a {
     font-family: "Georgia";
-    color: rgb(239,235,191);
-    font-size: 36px;
 }
 
+a {
+    font-size: 30px;
+    color: rgb(255,255,255);
+}
+
+
 p {
+    font-size: 30px;
     text-align: center;
+    color: rgb(239,235,191);
 }
 
 h1 {
+    font-size: 42px;
+    font-weight: normal;
     text-align: left;
+    color: rgb(239,235,191);
 
     border-color: rgb(88,88,88);
     border-width: 10px;
     border-bottom-style: solid;
 }
+
 
 .sidenav {
     width: 250px;
@@ -30,6 +39,11 @@ h1 {
     right: 0;
     overflow-x: hidden;
     padding-top: 100px;
+
+    border-color: rgb(88,88,88);
+    border-width: 15px;
+    border-left-style: solid;
+    border-bottom-style: solid;
 }
   
 .sidenav a {
@@ -39,14 +53,16 @@ h1 {
 }
 
 .sidenav a:hover {
-    color: rgb(241,241,241);
+    color: rgb(239,235,191);
 }
   
-  /* Style page content */
-  .main {
-    margin-left: 2500px; /* Same as the width of the sidebar */
+
+.body-text {
+    margin-top: 100px;
+    margin-left: 200px;
+    margin-right: 300px;
     padding: 0px 10px;
-  }
+}
   
 
 a:link    {text-decoration: none;}
